# game

./: .gitignore  Command Prompt.lnk  Game.sln  README.md  todo.txt
data/shaders/: minimal.frag  minimal.vert
src/: Assets.cpp  Assets.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Common.h  Console.cpp  Console.h  Entity.h  Game.cpp  Game.h  Game.vcxproj  Math.h  Memory.cpp  Memory.h  Platform.h  PlayerCommands.h  Renderer.cpp  Renderer.h  Test.cpp  Test.vcxproj  Unity.cpp  Unity.h  Win32.cpp  Windows.vcxproj  Windows.vcxproj.filters  World.cpp  World.h  build.bat  platform.h
src/assets/: AssetGenerator.cpp  Assets.vcxproj  Assets.vcxproj.filters  Builder.cpp  Builder.h  FileBMP.h  asset_generator.cpp
src/win32/: Win32.cpp
tools/: build.bat  game.bat  msdev.bat  shell.bat  vim.bat
